add theme selector and change style of products page

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -16,3 +16,11 @@ $theme := {
 
 .page
   @extend .fade-transition
+
+.grey--bg {
+  background-color: #F1F3F5;
+}
+
+* {
+  outline: unset !important;
+}
