add contacts page

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -20,6 +20,9 @@ $theme := {
 .grey--bg {
   background-color: #F1F3F5;
 }
+.no-underline {
+  text-decoration: none;
+}
 
 * {
   outline: unset !important;
